[package]
name = "calendar"
version = "0.1.0"
authors = ["printfn <printfn@users.noreply.github.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Simple CLI Calendar"
homepage = "https://github.com/printfn/fend-rs"
repository = "https://github.com/printfn/fend-rs"
readme = "README.md"
keywords = ["cli", "calendar", "date", "time"]
categories = ["command-line-utilities", "date-and-time"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
